# lv_lib_freetype

./: CMakeLists.txt  README.md  lv_freetype.c  lv_freetype.h  lv_lib_freetype.mk
